--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,15 @@
 
-.parent {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  gap: 8px;
-}
-  
-.div1 {
-  grid-column: span 3 / span 3;
-  grid-column-start: 2;
-}
-
-.div2 {
-  grid-column: span 5 / span 5;
-  grid-row-start: 2;
-}
-
-.div3 {
-  grid-column: span 3 / span 3;
-  grid-row: span 2 / span 2;
-  grid-column-start: 2;
-  grid-row-start: 3;
-  background-color: rgb(247, 0, 0, 0.3);
-}
-
-.div4 {
-  grid-column: span 5 / span 5;
-  grid-row-start: 5;
-  background-color: rgba(255, 0, 0, 0.3);
-}
-      
 
 body {
     background-color: pink;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
+    margin: 0;
   }
+
+  
   h1 {
-    color: rgb(225, 65, 65);
-    font-family: verdana;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
+    color: #2e2022;
   font-size: 300%;
   text-align:center
   }
@@ -49,7 +22,7 @@ body {
 
   p {
     color: white;
-    font-family: courier;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
     font-size: 160%;
     text-align:center
   }
@@ -62,3 +35,52 @@ body {
     text-decoration: none;
     display: inline-block;
   }
+
+
+
+.div2 {
+    text-align: center;
+}
+
+.div2 a {
+    border-radius: 10px;
+    background-color: #63494d;
+}
+
+.div3 {
+  display: block;
+  min-height: 40vh;
+  padding: 10px;
+  margin-top: 25px;
+  grid-column: span 3 / span 3;
+  grid-row: span 2 / span 2;
+  grid-column-start: 2;
+  grid-row-start: 3;
+  background-color: rgb(247, 0, 0, 0.3);
+  /* vertical height */
+}
+
+.div4 {
+  grid-column: span 5 / span 5;
+  grid-row-start: 5;
+  background-color: rgba(255, 0, 0, 0.3);
+  display: flex;
+  margin-top: 17px;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+
+.div4 div {
+    width: 100%;
+    padding: 14px;
+}
+
+.div4 div p {
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
+    font-size: 12px !important;
+}
